--- a/backend/shop/templates/shop/base.html
+++ b/backend/shop/templates/shop/base.html
@@ -1,5 +1,6 @@
 {% load static %}
 {% load shop_tags %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -24,8 +25,17 @@
 
 
 <div class="container" style="margin-top: 2%;">
-    <div style="background-color: blue" class="row justify-content-around">
-        <p style="color: yellow; font-weight: bold">Магазин парикмахерских товаров</p>
+    <div style="background-color: #2a71f9; border-radius: 20px 20px 0px 0px;" class="row justify-content-center">
+
+            <div class="col-1">
+
+                <img src="/media/logo_scissors.ico">
+            </div>
+            <div class="col-4">
+                <p style="color: yellow; font-weight: bold; font-size:20px; margin-top: 1.5em;">Магазин парикмахерских товаров</p>
+            </div>
+
+
     </div>
 </div>
 
@@ -76,7 +86,48 @@
 
 {% endblock %}
 </div>
+<br>
 </div>
+
+<footer>
+  <!-- Grid container -->
+  <div class="container" style="background-color: #47637c; color: white; padding-top: 1em;">
+    <!--Grid row-->
+    <div class="row justify-content-center">
+      <!--Grid column-->
+      <div class="col-3">
+        <h5 class="text-uppercase">Информация</h5>
+
+        <p>
+          Тут должна распологаться важная информация
+        </p>
+      </div>
+      <!--Grid column-->
+
+      <!--Grid column-->
+      <div class="col-3">
+        <h5 class="text-uppercase">Контакты</h5>
+
+        <p>
+          Email: andrey.iglovskiy@yandex.ru
+        </p>
+      </div>
+      <!--Grid column-->
+    </div>
+    <!--Grid row-->
+  </div>
+  <!-- Grid container -->
+ <!-- Copyright -->
+  <div class="container" style="background-color: #394f63">
+      <div class="row justify-content-center">
+          <div class="col-6" style="text-align:center; margin: 10px; color: white">
+            © 2022 Copyright: Piligrimich
+        </div>
+    </div>
+  </div>
+  <!-- Copyright -->
+
+</footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 <script>
